dependencies/babeltrace2-2.0.4/src/plugins/ctf/common/metadata/parser.output
Terminals unused in grammar

    CTF_ERROR


State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: declaration
    2     | file declaration

    3 keywords: CTF_VOID
    4         | CTF_CHAR
    5         | CTF_SHORT
    6         | CTF_INT
    7         | CTF_LONG
    8         | CTF_FLOAT
    9         | CTF_DOUBLE
   10         | CTF_SIGNED
   11         | CTF_UNSIGNED
   12         | CTF_BOOL
   13         | CTF_COMPLEX
   14         | CTF_IMAGINARY
   15         | CTF_FLOATING_POINT
   16         | CTF_INTEGER
   17         | CTF_STRING
   18         | CTF_ENUM
   19         | CTF_VARIANT
   20         | CTF_STRUCT
   21         | CTF_CONST
   22         | CTF_TYPEDEF
   23         | CTF_EVENT
   24         | CTF_STREAM
   25         | CTF_ENV
   26         | CTF_TRACE
   27         | CTF_CLOCK
   28         | CTF_CALLSITE
   29         | CTF_TOK_ALIGN

   30 postfix_expression: IDENTIFIER
   31                   | ID_TYPE
   32                   | keywords
   33                   | CTF_INTEGER_LITERAL
   34                   | CTF_STRING_LITERAL
   35                   | CTF_CHARACTER_LITERAL
   36                   | CTF_LPAREN unary_expression CTF_RPAREN
   37                   | postfix_expression CTF_LSBRAC unary_expression CTF_RSBRAC
   38                   | postfix_expression CTF_DOT IDENTIFIER
   39                   | postfix_expression CTF_DOT ID_TYPE
   40                   | postfix_expression CTF_DOT keywords
   41                   | postfix_expression CTF_RARROW IDENTIFIER
   42                   | postfix_expression CTF_RARROW ID_TYPE

   43 unary_expression: postfix_expression
   44                 | CTF_PLUS postfix_expression
   45                 | CTF_MINUS postfix_expression

   46 unary_expression_or_range: unary_expression CTF_DOTDOTDOT unary_expression
   47                          | unary_expression

   48 declaration: declaration_specifiers CTF_SEMICOLON
   49            | event_declaration
   50            | stream_declaration
   51            | env_declaration
   52            | trace_declaration
   53            | clock_declaration
   54            | callsite_declaration
   55            | declaration_specifiers CTF_TYPEDEF declaration_specifiers field_class_declarator_list CTF_SEMICOLON
   56            | CTF_TYPEDEF declaration_specifiers field_class_declarator_list CTF_SEMICOLON
   57            | declaration_specifiers CTF_TYPEDEF field_class_declarator_list CTF_SEMICOLON
   58            | CTF_TYPEALIAS declaration_specifiers abstract_declarator_list CTF_TYPEASSIGN alias_declaration_specifiers alias_abstract_declarator_list CTF_SEMICOLON

   59 event_declaration: event_declaration_begin event_declaration_end
   60                  | event_declaration_begin ctf_assignment_expression_list event_declaration_end

   61 event_declaration_begin: CTF_EVENT CTF_LBRAC

   62 event_declaration_end: CTF_RBRAC CTF_SEMICOLON

   63 stream_declaration: stream_declaration_begin stream_declaration_end
   64                   | stream_declaration_begin ctf_assignment_expression_list stream_declaration_end

   65 stream_declaration_begin: CTF_STREAM CTF_LBRAC

   66 stream_declaration_end: CTF_RBRAC CTF_SEMICOLON

   67 env_declaration: env_declaration_begin env_declaration_end
   68                | env_declaration_begin ctf_assignment_expression_list env_declaration_end

   69 env_declaration_begin: CTF_ENV CTF_LBRAC

   70 env_declaration_end: CTF_RBRAC CTF_SEMICOLON

   71 trace_declaration: trace_declaration_begin trace_declaration_end
   72                  | trace_declaration_begin ctf_assignment_expression_list trace_declaration_end

   73 trace_declaration_begin: CTF_TRACE CTF_LBRAC

   74 trace_declaration_end: CTF_RBRAC CTF_SEMICOLON

   75 clock_declaration: CTF_CLOCK clock_declaration_begin clock_declaration_end
   76                  | CTF_CLOCK clock_declaration_begin ctf_assignment_expression_list clock_declaration_end

   77 clock_declaration_begin: CTF_LBRAC

   78 clock_declaration_end: CTF_RBRAC CTF_SEMICOLON

   79 callsite_declaration: CTF_CALLSITE callsite_declaration_begin callsite_declaration_end
   80                     | CTF_CALLSITE callsite_declaration_begin ctf_assignment_expression_list callsite_declaration_end

   81 callsite_declaration_begin: CTF_LBRAC

   82 callsite_declaration_end: CTF_RBRAC CTF_SEMICOLON

   83 integer_declaration_specifiers: CTF_CONST
   84                               | integer_field_class_specifier
   85                               | integer_declaration_specifiers CTF_CONST
   86                               | integer_declaration_specifiers integer_field_class_specifier

   87 declaration_specifiers: CTF_CONST
   88                       | field_class_specifier
   89                       | declaration_specifiers CTF_CONST
   90                       | declaration_specifiers field_class_specifier

   91 field_class_declarator_list: field_class_declarator
   92                            | field_class_declarator_list CTF_COMMA field_class_declarator

   93 integer_field_class_specifier: CTF_CHAR
   94                              | CTF_SHORT
   95                              | CTF_INT
   96                              | CTF_LONG
   97                              | CTF_SIGNED
   98                              | CTF_UNSIGNED
   99                              | CTF_BOOL
  100                              | ID_TYPE
  101                              | CTF_INTEGER CTF_LBRAC CTF_RBRAC
  102                              | CTF_INTEGER CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC

  103 field_class_specifier: CTF_VOID
  104                      | CTF_CHAR
  105                      | CTF_SHORT
  106                      | CTF_INT
  107                      | CTF_LONG
  108                      | CTF_FLOAT
  109                      | CTF_DOUBLE
  110                      | CTF_SIGNED
  111                      | CTF_UNSIGNED
  112                      | CTF_BOOL
  113                      | CTF_COMPLEX
  114                      | CTF_IMAGINARY
  115                      | ID_TYPE
  116                      | CTF_FLOATING_POINT CTF_LBRAC CTF_RBRAC
  117                      | CTF_FLOATING_POINT CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC
  118                      | CTF_INTEGER CTF_LBRAC CTF_RBRAC
  119                      | CTF_INTEGER CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC
  120                      | CTF_STRING
  121                      | CTF_STRING CTF_LBRAC CTF_RBRAC
  122                      | CTF_STRING CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC
  123                      | CTF_ENUM enum_field_class_specifier
  124                      | CTF_VARIANT variant_field_class_specifier
  125                      | CTF_STRUCT struct_class_specifier

  126 struct_class_specifier: struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end
  127                       | IDENTIFIER struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end
  128                       | ID_TYPE struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end
  129                       | IDENTIFIER
  130                       | ID_TYPE
  131                       | struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end CTF_TOK_ALIGN CTF_LPAREN unary_expression CTF_RPAREN
  132                       | IDENTIFIER struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end CTF_TOK_ALIGN CTF_LPAREN unary_expression CTF_RPAREN
  133                       | ID_TYPE struct_declaration_begin struct_or_variant_declaration_list struct_declaration_end CTF_TOK_ALIGN CTF_LPAREN unary_expression CTF_RPAREN

  134 struct_declaration_begin: CTF_LBRAC

  135 struct_declaration_end: CTF_RBRAC

  136 variant_field_class_specifier: variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  137                              | CTF_LT IDENTIFIER CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  138                              | CTF_LT ID_TYPE CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  139                              | IDENTIFIER variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  140                              | IDENTIFIER CTF_LT IDENTIFIER CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  141                              | IDENTIFIER CTF_LT IDENTIFIER CTF_GT
  142                              | IDENTIFIER CTF_LT ID_TYPE CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  143                              | IDENTIFIER CTF_LT ID_TYPE CTF_GT
  144                              | ID_TYPE variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  145                              | ID_TYPE CTF_LT IDENTIFIER CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  146                              | ID_TYPE CTF_LT IDENTIFIER CTF_GT
  147                              | ID_TYPE CTF_LT ID_TYPE CTF_GT variant_declaration_begin struct_or_variant_declaration_list variant_declaration_end
  148                              | ID_TYPE CTF_LT ID_TYPE CTF_GT

  149 variant_declaration_begin: CTF_LBRAC

  150 variant_declaration_end: CTF_RBRAC

  151 enum_field_class_specifier: CTF_LBRAC enumerator_list CTF_RBRAC
  152                           | CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_RBRAC
  153                           | IDENTIFIER CTF_LBRAC enumerator_list CTF_RBRAC
  154                           | IDENTIFIER CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_RBRAC
  155                           | ID_TYPE CTF_LBRAC enumerator_list CTF_RBRAC
  156                           | ID_TYPE CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_RBRAC
  157                           | CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  158                           | CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  159                           | IDENTIFIER CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  160                           | IDENTIFIER CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  161                           | IDENTIFIER
  162                           | ID_TYPE CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  163                           | ID_TYPE CTF_COLON integer_declaration_specifiers CTF_LBRAC enumerator_list CTF_COMMA CTF_RBRAC
  164                           | ID_TYPE

  165 struct_or_variant_declaration_list: %empty
  166                                   | struct_or_variant_declaration_list struct_or_variant_declaration

  167 struct_or_variant_declaration: declaration_specifiers struct_or_variant_declarator_list CTF_SEMICOLON
  168                              | declaration_specifiers CTF_TYPEDEF declaration_specifiers field_class_declarator_list CTF_SEMICOLON
  169                              | CTF_TYPEDEF declaration_specifiers field_class_declarator_list CTF_SEMICOLON
  170                              | declaration_specifiers CTF_TYPEDEF field_class_declarator_list CTF_SEMICOLON
  171                              | CTF_TYPEALIAS declaration_specifiers abstract_declarator_list CTF_TYPEASSIGN alias_declaration_specifiers alias_abstract_declarator_list CTF_SEMICOLON

  172 alias_declaration_specifiers: CTF_CONST
  173                             | field_class_specifier
  174                             | IDENTIFIER
  175                             | alias_declaration_specifiers CTF_CONST
  176                             | alias_declaration_specifiers field_class_specifier
  177                             | alias_declaration_specifiers IDENTIFIER

  178 struct_or_variant_declarator_list: struct_or_variant_declarator
  179                                  | struct_or_variant_declarator_list CTF_COMMA struct_or_variant_declarator

  180 struct_or_variant_declarator: declarator
  181                             | CTF_COLON unary_expression
  182                             | declarator CTF_COLON unary_expression

  183 enumerator_list: enumerator
  184                | enumerator_list CTF_COMMA enumerator

  185 enumerator: IDENTIFIER
  186           | ID_TYPE
  187           | keywords
  188           | CTF_STRING_LITERAL
  189           | IDENTIFIER CTF_EQUAL unary_expression_or_range
  190           | ID_TYPE CTF_EQUAL unary_expression_or_range
  191           | keywords CTF_EQUAL unary_expression_or_range
  192           | CTF_STRING_LITERAL CTF_EQUAL unary_expression_or_range

  193 abstract_declarator_list: abstract_declarator
  194                         | abstract_declarator_list CTF_COMMA abstract_declarator

  195 abstract_declarator: direct_abstract_declarator
  196                    | pointer direct_abstract_declarator

  197 direct_abstract_declarator: %empty
  198                           | IDENTIFIER
  199                           | CTF_LPAREN abstract_declarator CTF_RPAREN
  200                           | direct_abstract_declarator CTF_LSBRAC unary_expression CTF_RSBRAC
  201                           | direct_abstract_declarator CTF_LSBRAC CTF_RSBRAC

  202 alias_abstract_declarator_list: alias_abstract_declarator
  203                               | alias_abstract_declarator_list CTF_COMMA alias_abstract_declarator

  204 alias_abstract_declarator: direct_alias_abstract_declarator
  205                          | pointer direct_alias_abstract_declarator

  206 direct_alias_abstract_declarator: %empty
  207                                 | CTF_LPAREN alias_abstract_declarator CTF_RPAREN
  208                                 | direct_alias_abstract_declarator CTF_LSBRAC unary_expression CTF_RSBRAC
  209                                 | direct_alias_abstract_declarator CTF_LSBRAC CTF_RSBRAC

  210 declarator: direct_declarator
  211           | pointer direct_declarator

  212 direct_declarator: IDENTIFIER
  213                  | CTF_LPAREN declarator CTF_RPAREN
  214                  | direct_declarator CTF_LSBRAC unary_expression CTF_RSBRAC

  215 field_class_declarator: direct_field_class_declarator
  216                       | pointer direct_field_class_declarator

  217 direct_field_class_declarator: IDENTIFIER
  218                              | CTF_LPAREN field_class_declarator CTF_RPAREN
  219                              | direct_field_class_declarator CTF_LSBRAC unary_expression CTF_RSBRAC

  220 pointer: CTF_STAR
  221        | CTF_STAR pointer
  222        | CTF_STAR type_qualifier_list pointer

  223 type_qualifier_list: CTF_CONST
  224                    | type_qualifier_list CTF_CONST

  225 ctf_assignment_expression_list: ctf_assignment_expression CTF_SEMICOLON
  226                               | ctf_assignment_expression_list ctf_assignment_expression CTF_SEMICOLON

  227 ctf_assignment_expression: unary_expression CTF_EQUAL unary_expression
  228                          | unary_expression CTF_TYPEASSIGN declaration_specifiers
  229                          | declaration_specifiers CTF_TYPEDEF declaration_specifiers field_class_declarator_list
  230                          | CTF_TYPEDEF declaration_specifiers field_class_declarator_list
  231                          | declaration_specifiers CTF_TYPEDEF field_class_declarator_list
  232                          | CTF_TYPEALIAS declaration_specifiers abstract_declarator_list CTF_TYPEASSIGN alias_declaration_specifiers alias_abstract_declarator_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CTF_INTEGER_LITERAL <ull> (258) 33
    CTF_STRING_LITERAL <s> (259) 34 188 192
    CTF_CHARACTER_LITERAL <s> (260) 35
    CTF_LSBRAC (261) 37 200 201 208 209 214 219
    CTF_RSBRAC (262) 37 200 201 208 209 214 219
    CTF_LPAREN (263) 36 131 132 133 199 207 213 218
    CTF_RPAREN (264) 36 131 132 133 199 207 213 218
    CTF_LBRAC (265) 61 65 69 73 77 81 101 102 116 117 118 119 121 122 134 149 151 152 153 154 155 156 157 158 159 160 162 163
    CTF_RBRAC (266) 62 66 70 74 78 82 101 102 116 117 118 119 121 122 135 150 151 152 153 154 155 156 157 158 159 160 162 163
    CTF_RARROW (267) 41 42
    CTF_STAR (268) 220 221 222
    CTF_PLUS (269) 44
    CTF_MINUS (270) 45
    CTF_LT (271) 137 138 140 141 142 143 145 146 147 148
    CTF_GT (272) 137 138 140 141 142 143 145 146 147 148
    CTF_TYPEASSIGN (273) 58 171 228 232
    CTF_COLON (274) 152 154 156 158 160 163 181 182
    CTF_SEMICOLON (275) 48 55 56 57 58 62 66 70 74 78 82 167 168 169 170 171 225 226
    CTF_DOTDOTDOT (276) 46
    CTF_DOT (277) 38 39 40
    CTF_EQUAL (278) 189 190 191 192 227
    CTF_COMMA (279) 92 157 158 159 160 162 163 179 184 194 203
    CTF_CONST (280) 21 83 85 87 89 172 175 223 224
    CTF_CHAR (281) 4 93 104
    CTF_DOUBLE (282) 9 109
    CTF_ENUM (283) 18 123
    CTF_ENV (284) 25 69
    CTF_EVENT (285) 23 61
    CTF_FLOATING_POINT (286) 15 116 117
    CTF_FLOAT (287) 8 108
    CTF_INTEGER (288) 16 101 102 118 119
    CTF_INT (289) 6 95 106
    CTF_LONG (290) 7 96 107
    CTF_SHORT (291) 5 94 105
    CTF_SIGNED (292) 10 97 110
    CTF_STREAM (293) 24 65
    CTF_STRING (294) 17 120 121 122
    CTF_STRUCT (295) 20 125
    CTF_TRACE (296) 26 73
    CTF_CALLSITE (297) 28 79 80
    CTF_CLOCK (298) 27 75 76
    CTF_TYPEALIAS (299) 58 171 232
    CTF_TYPEDEF (300) 22 55 56 57 168 169 170 229 230 231
    CTF_UNSIGNED (301) 11 98 111
    CTF_VARIANT (302) 19 124
    CTF_VOID (303) 3 103
    CTF_BOOL (304) 12 99 112
    CTF_COMPLEX (305) 13 113
    CTF_IMAGINARY (306) 14 114
    CTF_TOK_ALIGN (307) 29 131 132 133
    IDENTIFIER <s> (308) 30 38 41 127 129 132 137 139 140 141 142 143 145 146 153 154 159 160 161 174 177 185 189 198 212 217
    ID_TYPE <s> (309) 31 39 42 100 115 128 130 133 138 142 143 144 145 146 147 148 155 156 162 163 164 186 190
    CTF_ERROR (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    file (57)
        on left: 1 2
        on right: 0 2
    keywords <s> (58)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 32 40 187 191
    postfix_expression <n> (59)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 37 38 39 40 41 42 43 44 45
    unary_expression <n> (60)
        on left: 43 44 45
        on right: 36 37 46 47 131 132 133 181 182 200 208 214 219 227 228
    unary_expression_or_range <n> (61)
        on left: 46 47
        on right: 189 190 191 192
    declaration <n> (62)
        on left: 48 49 50 51 52 53 54 55 56 57 58
        on right: 1 2
    event_declaration <n> (63)
        on left: 59 60
        on right: 49
    event_declaration_begin (64)
        on left: 61
        on right: 59 60
    event_declaration_end (65)
        on left: 62
        on right: 59 60
    stream_declaration <n> (66)
        on left: 63 64
        on right: 50
    stream_declaration_begin (67)
        on left: 65
        on right: 63 64
    stream_declaration_end (68)
        on left: 66
        on right: 63 64
    env_declaration <n> (69)
        on left: 67 68
        on right: 51
    env_declaration_begin (70)
        on left: 69
        on right: 67 68
    env_declaration_end (71)
        on left: 70
        on right: 67 68
    trace_declaration <n> (72)
        on left: 71 72
        on right: 52
    trace_declaration_begin (73)
        on left: 73
        on right: 71 72
    trace_declaration_end (74)
        on left: 74
        on right: 71 72
    clock_declaration <n> (75)
        on left: 75 76
        on right: 53
    clock_declaration_begin (76)
        on left: 77
        on right: 75 76
    clock_declaration_end (77)
        on left: 78
        on right: 75 76
    callsite_declaration <n> (78)
        on left: 79 80
        on right: 54
    callsite_declaration_begin (79)
        on left: 81
        on right: 79 80
    callsite_declaration_end (80)
        on left: 82
        on right: 79 80
    integer_declaration_specifiers <n> (81)
        on left: 83 84 85 86
        on right: 85 86 152 154 156 158 160 163
    declaration_specifiers <n> (82)
        on left: 87 88 89 90
        on right: 48 55 56 57 58 89 90 167 168 169 170 171 228 229 230 231 232
    field_class_declarator_list <n> (83)
        on left: 91 92
        on right: 55 56 57 92 168 169 170 229 230 231
    integer_field_class_specifier <n> (84)
        on left: 93 94 95 96 97 98 99 100 101 102
        on right: 84 86
    field_class_specifier <n> (85)
        on left: 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
        on right: 88 90 173 176
    struct_class_specifier <n> (86)
        on left: 126 127 128 129 130 131 132 133
        on right: 125
    struct_declaration_begin (87)
        on left: 134
        on right: 126 127 128 131 132 133
    struct_declaration_end (88)
        on left: 135
        on right: 126 127 128 131 132 133
    variant_field_class_specifier <n> (89)
        on left: 136 137 138 139 140 141 142 143 144 145 146 147 148
        on right: 124
    variant_declaration_begin (90)
        on left: 149
        on right: 136 137 138 139 140 142 144 145 147
    variant_declaration_end (91)
        on left: 150
        on right: 136 137 138 139 140 142 144 145 147
    enum_field_class_specifier <n> (92)
        on left: 151 152 153 154 155 156 157 158 159 160 161 162 163 164
        on right: 123
    struct_or_variant_declaration_list <n> (93)
        on left: 165 166
        on right: 126 127 128 131 132 133 136 137 138 139 140 142 144 145 147 166
    struct_or_variant_declaration <n> (94)
        on left: 167 168 169 170 171
        on right: 166
    alias_declaration_specifiers <n> (95)
        on left: 172 173 174 175 176 177
        on right: 58 171 175 176 177 232
    struct_or_variant_declarator_list <n> (96)
        on left: 178 179
        on right: 167 179
    struct_or_variant_declarator <n> (97)
        on left: 180 181 182
        on right: 178 179
    enumerator_list <n> (98)
        on left: 183 184
        on right: 151 152 153 154 155 156 157 158 159 160 162 163 184
    enumerator <n> (99)
        on left: 185 186 187 188 189 190 191 192
        on right: 183 184
    abstract_declarator_list <n> (100)
        on left: 193 194
        on right: 58 171 194 232
    abstract_declarator <n> (101)
        on left: 195 196
        on right: 193 194 199
    direct_abstract_declarator <n> (102)
        on left: 197 198 199 200 201
        on right: 195 196 200 201
    alias_abstract_declarator_list <n> (103)
        on left: 202 203
        on right: 58 171 203 232
    alias_abstract_declarator <n> (104)
        on left: 204 205
        on right: 202 203 207
    direct_alias_abstract_declarator <n> (105)
        on left: 206 207 208 209
        on right: 204 205 208 209
    declarator <n> (106)
        on left: 210 211
        on right: 180 182 213
    direct_declarator <n> (107)
        on left: 212 213 214
        on right: 210 211 214
    field_class_declarator <n> (108)
        on left: 215 216
        on right: 91 92 218
    direct_field_class_declarator <n> (109)
        on left: 217 218 219
        on right: 215 216 219
    pointer <n> (110)
        on left: 220 221 222
        on right: 196 205 211 216 221 222
    type_qualifier_list (111)
        on left: 223 224
        on right: 222 224
    ctf_assignment_expression_list <n> (112)
        on left: 225 226
        on right: 60 64 68 72 76 80 102 117 119 122 226
    ctf_assignment_expression <n> (113)
        on left: 227 228 229 230 231 232
        on right: 225 226


State 0

    0 $accept: . file $end

    CTF_CONST           shift, and go to state 1
    CTF_CHAR            shift, and go to state 2
    CTF_DOUBLE          shift, and go to state 3
    CTF_ENUM            shift, and go to state 4
    CTF_ENV             shift, and go to state 5
    CTF_EVENT           shift, and go to state 6
    CTF_FLOATING_POINT  shift, and go to state 7
    CTF_FLOAT           shift, and go to state 8
    CTF_INTEGER         shift, and go to state 9
    CTF_INT             shift, and go to state 10
    CTF_LONG            shift, and go to state 11
    CTF_SHORT           shift, and go to state 12
    CTF_SIGNED          shift, and go to state 13
    CTF_STREAM          shift, and go to state 14
    CTF_STRING          shift, and go to state 15
    CTF_STRUCT          shift, and go to state 16
    CTF_TRACE           shift, and go to state 17
    CTF_CALLSITE        shift, and go to state 18
    CTF_CLOCK           shift, and go to state 19
    CTF_TYPEALIAS       shift, and go to state 20
    CTF_TYPEDEF         shift, and go to state 21
    CTF_UNSIGNED        shift, and go to state 22
    CTF_VARIANT         shift, and go to state 23
    CTF_VOID            shift, and go to state 24
    CTF_BOOL            shift, and go to state 25
    CTF_COMPLEX         shift, and go to state 26
    CTF_IMAGINARY       shift, and go to state 27
    ID_TYPE             shift, and go to state 28

    file                      go to state 29
    declaration               go to state 30
    event_declaration         go to state 31
    event_declaration_begin   go to state 32
    stream_declaration        go to state 33
    stream_declaration_begin  go to state 34
    env_declaration           go to state 35
    env_declaration_begin     go to state 36
    trace_declaration         go to state 37
    trace_declaration_begin   go to state 38
    clock_declaration         go to state 39
    callsite_declaration      go to state 40
    declaration_specifiers    go to state 41
    field_class_specifier     go to state 42


State 1

   87 declaration_specifiers: CTF_CONST .

    $default  reduce using rule 87 (declaration_specifiers)


State 2

  104 field_class_specifier: CTF_CHAR .

    $default  reduce using rule 104 (field_class_specifier)


State 3

  109 field_class_specifier: CTF_DOUBLE .

    $default  reduce using rule 109 (field_class_specifier)


State 4

  123 field_class_specifier: CTF_ENUM . enum_field_class_specifier

    CTF_LBRAC   shift, and go to state 43
    CTF_COLON   shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    ID_TYPE     shift, and go to state 46

    enum_field_class_specifier  go to state 47


State 5

   69 env_declaration_begin: CTF_ENV . CTF_LBRAC

    CTF_LBRAC  shift, and go to state 48


State 6

   61 event_declaration_begin: CTF_EVENT . CTF_LBRAC

    CTF_LBRAC  shift, and go to state 49


State 7

  116 field_class_specifier: CTF_FLOATING_POINT . CTF_LBRAC CTF_RBRAC
  117                      | CTF_FLOATING_POINT . CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC

    CTF_LBRAC  shift, and go to state 50


State 8

  108 field_class_specifier: CTF_FLOAT .

    $default  reduce using rule 108 (field_class_specifier)


State 9

  118 field_class_specifier: CTF_INTEGER . CTF_LBRAC CTF_RBRAC
  119                      | CTF_INTEGER . CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC

    CTF_LBRAC  shift, and go to state 51


State 10

  106 field_class_specifier: CTF_INT .

    $default  reduce using rule 106 (field_class_specifier)


State 11

  107 field_class_specifier: CTF_LONG .

    $default  reduce using rule 107 (field_class_specifier)


State 12

  105 field_class_specifier: CTF_SHORT .

    $default  reduce using rule 105 (field_class_specifier)


State 13

  110 field_class_specifier: CTF_SIGNED .

    $default  reduce using rule 110 (field_class_specifier)


State 14

   65 stream_declaration_begin: CTF_STREAM . CTF_LBRAC

    CTF_LBRAC  shift, and go to state 52


State 15

  120 field_class_specifier: CTF_STRING .
  121                      | CTF_STRING . CTF_LBRAC CTF_RBRAC
  122                      | CTF_STRING . CTF_LBRAC ctf_assignment_expression_list CTF_RBRAC

    CTF_LBRAC  shift, and go to state 53

    $default  reduce using rule 120 (field_class_specifier)


State 16

  125 field_class_specifier: CTF_STRUCT . struct_class_specifier

    CTF_LBRAC   shift, and go to state 54
    IDENTIFIER  shift, and go to state 55
    ID_TYPE     shift, and go to state 56

    struct_class_specifier    go to state 57
    struct_declaration_begin  go to state 58


State 17

   73 trace_declaration_begin: CTF_TRACE . CTF_LBRAC

    CTF_LBRAC  shift, and go to state 59


State 18

   79 callsite_declaration: CTF_CALLSITE . callsite_declaration_begin callsite_declaration_end
   80                     | CTF_CALLSITE . callsite_declaration_begin ctf_assignment_expression_list callsite_declaration_end

    CTF_LBRAC  shift, and go to state 60

    callsite_declaration_begin  go to state 61


State 19

   75 clock_declaration: CTF_CLOCK . clock_declaration_begin clock_declaration_end
   76                  | CTF_CLOCK . clock_declaration_begin ctf_assignment_expression_list clock_declaration_end

    CTF_LBRAC  shift, and go to state 62

    clock_declaration_begin  go to state 63


State 20

   58 declaration: CTF_TYPEALIAS . declaration_specifiers abstract_declarator_list CTF_TYPEASSIGN alias_declaration_specifiers alias_abstract_declarator_list CTF_SEMICOLON

    CTF_CONST           shift, and go to state 1
    CTF_CHAR            shift, and go to state 2
    CTF_DOUBLE          shift, and go to state 3
    CTF_ENUM            shift, and go to state 4
    CTF_FLOATING_POINT  shift, and go to state 7
    CTF_FLOAT           shift, and go to state 8
    CTF_INTEGER         shift, and go to state 9
    CTF_INT             shift, and go to state 10
    CTF_LONG            shift, and go to state 11
    CTF_SHORT           shift, and go to state 12
    CTF_SIGNED          shift, and go to state 13
    CTF_STRING          shift, and go to state 15
    CTF_STRUCT          shift, and go to state 16
    CTF_UNSIGNED        shift, and go to state 22
    CTF_VARIANT         shift, and go to state 23
    CTF_VOID            shift, and go to state 24
    CTF_BOOL            shift, and go to state 25
    CTF_COMPLEX         shift, and go to state 26
    CTF_IMAGINARY       shift, and go to state 27
    ID_TYPE             shift, and go to state 28

    declaration_specifiers  go to state 64
    field_class_specifier   go to state 42


State 21

   56 declaration: CTF_TYPEDEF . declaration_specifiers field_class_declarator_list CTF_SEMICOLON

    CTF_CONST           shift, and go to state 1
    CTF_CHAR            shift, and go to state 2
    CTF_DOUBLE          shift, and go to state 3
    CTF_ENUM            shift, and go to state 4
    CTF_FLOATING_POINT  shift, and go to state 7
    CTF_FLOAT           shift, and go to state 8
    CTF_INTEGER         shift, and go to state 9
    CTF_INT             shift, and go to state 10
    CTF_LONG            shift, and go to state 11
    CTF_SHORT           shift, and go to state 12
    CTF_SIGNED          shift, and go to state 13
    CTF_STRING          shift, and go to state 15
    CTF_STRUCT          shift, and go to state 16
    CTF_UNSIGNED        shift, and go to state 22
    CTF_VARIANT         shift, and go to state 23
    CTF_VOID            shift, and go to state 24
    CTF_BOOL            shift, and go to state 25
    CTF_COMPLEX         shift, and go to state 26
    CTF_IMAGINARY       shift, and go to state 27
    ID_TYPE             shift, and go to state 28

    declaration_specifiers  go to state 65
    field_class_specifier   go to state 42


State 22

  111 field_class_specifier: CTF_UNSIGNED .

    $default  reduce using rule 111 (field_class_specifier)


State 23

  124 field_class_specifier: CTF_VARIANT . variant_field_class_specifier

    CTF_LBRAC   shift, and go to state 66
    CTF_LT      shift, and go to state 67
    IDENTIFIER  shift, and go to state 68
    ID_TYPE     shift, and go to state 69

    variant_field_class_specifier  go to state 70
    variant_declaration_begin      go to state 71


State 24

  103 field_class_specifier: CTF_VOID .

    $default  reduce using rule 103 (field_class_specifier)


State 25

  112 field_class_specifier: CTF_BOOL .

    $default  reduce using rule 112 (field_class_specifier)


State 26

  113 field_class_specifier: CTF_COMPLEX .

    $default  reduce using rule 113 (field_class_specifier)


State 27

  114 field_class_specifier: CTF_IMAGINARY .

    $default  reduce using rule 114 (field_class_specifier)


State 28

  115 field_class_specifier: ID_TYPE .

    $default  reduce using rule 115 (field_class_specifier)


State 29

    0 $accept: file . $end
    2 file: file . declaration
